Migrate to Spring boot 4, doccumentation and config updates, refactoring